<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/house"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_programa"
        android:icon="@drawable/calendar"
        android:title="@string/title_programa" />

    <item
        android:id="@+id/navigation_magistrales"
        android:icon="@drawable/employee"
        android:title="@string/title_magistrales" />

    <item
        android:id="@+id/navigation_patrocinadores"
        android:icon="@drawable/handshake"
        android:title="@string/title_patrocinadores" />

    <item
        android:id="@+id/navigation_ubicacion"
        android:icon="@drawable/placeholder"
        android:title="@string/title_ubicacion" />

</menu>
